	PR gdb/12843 	* linespec.c (locate_first_half): Keep ':' if it looks 	like it could be part of a Windows path starting with 	a drive letter.